# libswiftdemangle

./: README.md  meson.build
include/: swiftdemangle.h
include/swift/Basic/: type_traits.h
include/swift/Runtime/: Config.h  Metadata.h
src/: Demangle.cpp  meson.build
tests/: meson.build  test.c
